--- a/Index.html
+++ b/Index.html
@@ -24,11 +24,11 @@
       <div id="main-container">
         <form class="myform" action="" onsubmit=" return registeruser()">
              <label for="Email" id="emaillable">Email </label>  <br>
-             <input type="text" name="email" id="emailAddr" onfocusout="validateemail(this)" required > <span> </span>
-              <label for="firstName">FirstName </label>  
-             <input type="text" name="firstName" id="fname" required pattern="([a-z]*|[A-Z]*)*"  required>    
-               <label for="LastName">LastName </label> 
-              <input type="text" name="LastName" id="lname"required pattern="([a-z]*|[A-Z]*)*" required>  <br>    
+             <input  type="text" name="email" id="emailAddr" onfocusout="validateemail(this)" required > <span> </span>
+              <label for="firstName" id="firstname">FirstName </label>  
+             <input type="text" name="firstName" id="fname"  onfocusout="validatefname(this)"  required>    
+               <label for="LastName" id="lastname">LastName </label> 
+              <input type="text" name="LastName" id="lname"  onfocusout="validatelname(this)"required>  <br>    
                  <label for="Gender">Gender </label>  
               <select name="Gender" :required>
               <option value="M">Male</option>
