--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <header>
       <div class="container">
         <img id="logo" src="./Assets/images/image_1207_todo_01.png" alt="">
-        <button id="loginbutton">LOGIN </button>
+        <button id="signupbutton">REGISTER </button> 
         <!-- <button id="signupbutton">REGISTER </button> -->
         <script src="./Assets/js/home.js"></script>
       </div>
