--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Assets/css/normalize.css">
     <link rel="stylesheet" href="./Assets/css/reset.css">
     <link rel="stylesheet" href="./Assets/css/main.css">
-    <title>Loginpage</title>
+    <title>Welcome</title>
     <script src="./Assets/js/home.js"></script>
   </head>
 
@@ -16,21 +16,13 @@
     <header>
       <div class="container">
         <img id="logo" src="./Assets/images/image_1207_todo_01.png" alt="">
-        <button id="signupbutton">REGISTER </button> 
+        <button id="viewpro">view profile </button> 
         <!-- <button id="signupbutton">REGISTER </button> -->
-        
+       
       </div>
     </header>
     <main>
-      <div id="main-container">
-        <form  action="">
-             <label for="Email">Email </label>  <br>
-             <input type="Email" name="" id="">
-             <label for="password">Password</label>
-             <input type="Password" name="" id="">
-            <input type="submit">
-        </form>
-      </div>
+   
 
     </main>
 
