looking for gloabl var

--- a/homepage.html
+++ b/homepage.html
@@ -16,8 +16,8 @@
     <header>
       <div class="container">
         <img id="logo" src="./Assets/images/image_1207_todo_01.png" alt="">
-        <button id="viewpro">view profile </button> 
-        <!-- <button id="signupbutton">REGISTER </button> -->
+        <button id="viewpro" onclick="  window.location = './profile.html';"> view profile </button> 
+       
        
       </div>
     </header>
