--- a/profile.html
+++ b/profile.html
@@ -30,9 +30,9 @@
                <label for="PR_GENDER">Gender</label> <input type="text" name="" id="PR_GENDER" readonly>
                <label for="PR_ADDRESS">Address</label> <input type="text" name="" id="PR_ADDRESS" readonly>
                <label for="PR_IMAGE">Image path</label> <input type="text" name="" id="PR_IMAGE" readonly> 
-              
+              <div id="choose" style="display:none"> <input type="file" > </div>
               <button id="editprofile" onclick="makeeditable()">Edit</button>
-             
+             <button id="submit" onclick="updateinfo()">Update</button>
         </div>
 
     </main>
