object array added

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <img id="logo" src="./Assets/images/image_1207_todo_01.png" alt="">
-        <button id="signupbutton" onclick="  window.location = 'Index.html';">REGISTER </button> 
+        <button id="signupbutton" onclick="  window.location = 'Index.html';">New user? </button> 
        
         
       </div>
