--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./Assets/css/reset.css">
     <link rel="stylesheet" href="./Assets/css/main.css">
     <title>todo</title>
-    <script src="./Assets/js/home.js"></script>
-    <script src="./Assets/js/validations.js"></script>
+    <script src="./javascript/index.js"></script>
+    <script src="./javascript/application.js"></script>
   </head>
 
   <body>
