--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./Assets/css/main.css">
     <link rel="stylesheet" href="./Assets/css/profile.css">
     <title>Welcome</title>
-    <script src="./Assets/js/home.js"></script>
+    <script src="./javascript/profile.js"></script>
   </head>
 
   <body onload="loadprofile()">
