to do partially completed

--- a/homepage.html
+++ b/homepage.html
@@ -28,6 +28,17 @@
       <div class="container">
           <p id="username"></p>
      <button id="additem" onclick="additem()">+Add New Item</button>
+     <table id="customers">
+        <tr id="todo_header">
+          <th id="title">title</th>
+          <th id="catogory">catogory</th>
+          <th id="duedate">duedate</th>
+          <th id="reminder">reminder</th>
+          <th id="reminder">reminder_date</th>
+          <th id="visibility">visibility</th>
+        </tr>
+
+       
     </div>
     </main>
 
