--- a/newItem.html
+++ b/newItem.html
@@ -31,7 +31,7 @@
         <label for="title">Title:</label> <input type="text" id=todoTitle> <br>
         <label for="Category">Select Categories</label>  <input name="Category" type="radio" value="office"> Office <input type="radio"  name="Category" value="home"> Home <input type="radio"  name="Category" value="personal"> Personal <br>
         <label for="date">Due Date: </label> <input type="date" id="Due_date"> <br>
-        <label for="reminder">Do you want to set reminder?</label> <input id="reminder" type="checkbox"> <br>
+        <label for="reminder">Do you want to set reminder?</label> <input id="reminder" type="checkbox" onchange="addreminder()"> <br> <div id="time" style="display:none"> <input type="date" name="" id="Rdate"> </div>
        <label for="public?">visibility</label> <input type="radio" name="visibility" value="Public"> Public <input type="radio" name="visibility" value="Private"> Private <br>
        <input type="button" id="submit" value="Save" onclick="saveitem()">
     </div>
