--- a/homepage.html
+++ b/homepage.html
@@ -30,12 +30,14 @@
      <button id="additem" onclick="additem()">+Add New Item</button>
      <table id="customers">
         <tr id="todo_header">
+            <th> Status </th>
           <th id="title">title</th>
           <th id="catogory">catogory</th>
           <th id="duedate">duedate</th>
           <th id="reminder">reminder</th>
           <th id="reminder">reminder_date</th>
           <th id="visibility">visibility</th>
+          <th> </th>
         </tr>
 
        
