--- a/homepage.html
+++ b/homepage.html
@@ -27,7 +27,10 @@
     <main>
       <div class="container">
           <p id="username"></p>
+          <div id="buttons">
      <button id="additem" onclick="additem()">+Add New Item</button>
+     <button id="Delitem" onclick="Deleteitems()">-Delete Completed items</button>
+    </div>
      <table id="customers">
         <tr id="todo_header">
             <th> Status </th>
@@ -37,7 +40,7 @@
           <th id="reminder">reminder</th>
           <th id="reminder">reminder_date</th>
           <th id="visibility">visibility</th>
-          <th> </th>
+
         </tr>
 
        
