status updated at backend

--- a/homepage.html
+++ b/homepage.html
@@ -29,17 +29,19 @@
           <p id="username"></p>
           <div id="buttons">
      <button id="additem" onclick="additem()">+Add New Item</button>
-     <button id="Delitem" onclick="Deleteitems()">-Delete Completed items</button>
+     <button id="Delitem" onclick="Deleteitems()">-Delete selected items</button>
     </div>
      <table id="customers">
         <tr id="todo_header">
-            <th> Status </th>
+            <th> Sr No </th>
           <th id="title">title</th>
           <th id="catogory">catogory</th>
           <th id="duedate">duedate</th>
           <th id="reminder">reminder</th>
           <th id="reminder">reminder_date</th>
           <th id="visibility">visibility</th>
+          <th id="status">Status</th>
+          
 
         </tr>
 
