--- a/Assets/htmlPages/newItem.html
+++ b/Assets/htmlPages/newItem.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./Assets/css/normalize.css">
-    <link rel="stylesheet" href="./Assets/css/reset.css">
-    <link rel="stylesheet" href="./Assets/css/main.css">
-    <link rel="stylesheet" href="./Assets/css/home.css">
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/home.css">
     <title>Welcome</title>
-    <script src="./javascript/homepage.js"> </script>
+    <script src="../../javascript/ToDoModule.js"> </script>
   </head>
 
   <body onload="loadhomepage()">
