--- a/Assets/htmlPages/profile.html
+++ b/Assets/htmlPages/profile.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./Assets/css/normalize.css">
-    <link rel="stylesheet" href="./Assets/css/reset.css">
-    <link rel="stylesheet" href="./Assets/css/main.css">
-    <link rel="stylesheet" href="./Assets/css/profile.css">
+     <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/profile.css">
     <title>Welcome</title>
-    <script src="./javascript/profile.js"></script>
+    <script src="../../javascript/profileModule.js"></script>
+     <script src="../../javascript/storageModule.js"></script>
+
   </head>
 
   <body onload="loadprofile()">
