done with some modules

--- a/Assets/htmlPages/homepage.html
+++ b/Assets/htmlPages/homepage.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/home.css">
     <title>Welcome</title>
     <script src="../../javascript/ToDoModule.js"> </script>
+    <script src="../../javascript/storageModule.js"></script>
   </head>
 
   <body onload="loadhomepage()">
