--- a/Assets/htmlPages/login.html
+++ b/Assets/htmlPages/login.html
@@ -11,6 +11,7 @@
     <title>Loginpage</title>
     <script src="../../javascript/ValidationModule.js"></script>
     <script src="../../javascript/loginModule.js"></script>
+    <script src="../../javascript/storageModule.js"></script>
   </head>
 
   <body>
