--- a/Assets/htmlPages/profile.html
+++ b/Assets/htmlPages/profile.html
@@ -24,7 +24,7 @@
     </header>
  
     <main>
-        <div class="profile-container">
+        <div class="profile-container" id="profileContainer">
                 <p>My Profile</p>
                <label for="PR_EMAIL">Email</label> <input type="text" id="PR_EMAIL" readonly>
                <label for="PR_FN">Fast Name</label> <input type="text" name="" id="PR_FN" readonly>
@@ -32,9 +32,9 @@
                <label for="PR_GENDER">Gender</label> <input type="text" name="" id="PR_GENDER" readonly>
                <label for="PR_ADDRESS">Address</label> <input type="text" name="" id="PR_ADDRESS" readonly>
                <label for="PR_IMAGE">Image path</label> <input type="text" name="" id="PR_IMAGE" readonly> 
-              <div id="choose" style="display:none"> <input type="file" > </div>
-              <button id="editprofile" onclick="makeeditable()">Edit</button>
-             <button id="submit" onclick="updateinfo()">Update</button>
+             <br>
+              <button id="editprofile" onclick="makeEditable()">Edit</button>
+             <button id="submitbtn" onclick="updateInfo()">Update</button>
         </div>
 
     </main>
