--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
                  <input type="Password" id="pwd1" placeholder="Password" required >
                  <input type="Password" id="pwd2" placeholder="Password"  onfocusout="validatepassword()"  required>
                 <h5 id="msg" style="color:red"></h5>
-                 <input id="submit" type="submit" onclick="registeruser(event)" value="REGISTER"  >
+                 <input id="submit" type="submit" onclick="registerUser(event)" value="REGISTER"  >
             </ul>
         </form>
       </div>
