--- a/Assets/htmlPages/login.html
+++ b/Assets/htmlPages/login.html
@@ -27,7 +27,7 @@
       <div id="main-container">
         <form  action="">
              <label for="Email" id="emaillable">Email </label>  <br>
-             <input  type="text" name="email" id="emailAddr" onfocusout="validateusername(this)" required > <span>
+             <input  type="text" name="email" id="emailAddr" onfocusout="validateemail(this)" required > <span>
              <label for="password">Password</label>
              <input type="Password" name="" id="pwd">
             <input type="submit" id="submit" onclick="login(event);">
