--- a/Assets/htmlPages/profile.html
+++ b/Assets/htmlPages/profile.html
@@ -18,7 +18,7 @@
   <body onload="loadprofile()">
     <header>
       <div class="container">
-        <img id="logo" src="./Assets/images/image_1207_todo_01.png" alt="">
+        <img id="logo" src="../images/image_1207_todo_01.png" alt="">
         <button id="Home" onclick="  window.location = './homepage.html';"> Home </button> 
       </div>
     </header>
