validation partially completed

--- a/Assets/htmlPages/homepage.html
+++ b/Assets/htmlPages/homepage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/home.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <title>Welcome</title>
     <script src="../../javascript/ToDoModule.js"> </script>
     <script src="../../javascript/storageModule.js"></script>
