--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./Assets/css/reset.css">
     <link rel="stylesheet" href="./Assets/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rammetto+One" rel="stylesheet">
     <title>todo</title>
     <script src="./javascript/registrationModule.js"></script>
     <script src="./javascript/ValidationModule.js"></script>
@@ -24,6 +25,9 @@
       
       </div>
     </header>
+    <section>
+      <h1>Create  Your  ToDo  Account  Here...</h1>
+    </section>
     <main>
       <div id="main-container">
           <h2>New to To-Do? Register Here</h2>
